# Mini-Weather-Station

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.md  README.md  arm-gcc.cmake  makefile
core/src/: main.c  stm32f10x_it.c
core/startup/: STM32F103C8Tx_FLASH.ld
drivers/HARDWARE/: PIC.c  adc.c  adc.h  adc_sensor.c  adc_sensor.h  bmp280.c  bmp280.h  buzzer.c  buzzer.h  gpio_all.c  gpio_map.c  gpio_map.h  i2c_hw.c  i2c_hw.h  iwdg.c  iwdg.h  keys.c  keys.h  lcd.c  lcd.h  lcdfont.h  led.c  led.h  ledf.c  ledf.h  sensor.c  sensor.h  spi_hw.c  spi_hw.h  tim_capture.c  tim_capture.h
drivers/SYSTEM/delay/: delay.c  delay.h
drivers/SYSTEM/miniprintf/: mini_printf.c  mini_printf.h
drivers/SYSTEM/sys/: stm32_syscalls.c  sys.c  sys.h
drivers/SYSTEM/usart/: usart.h
